--- a/RPAuto/FrmMain.resx
+++ b/RPAuto/FrmMain.resx
@@ -117,6 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="iml.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>87, 17</value>
+  </metadata>
+  <data name="iml.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABY
+        CgAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABUAMAARQDAAEBAQABCAUAAUABBhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/bQABDgMAAW05AAH/
+        HgAB8w4HAfAB/xwAAf8B8QGSAW0B6gHsAQcB9BoAAfQBEAEPAeoM6wFDAQcbAAH/AesCAAEQAUMBDgEA
+        ARAB8hkAAfABFAESAbwMAAEHAeoaAAH0ARIBDgGSAfMC/wH0AbwBQwEQAfIYAAHwARMC7QwAAfMBDwH/
+        GAAB/wH3AQABBwYAAfMBQwEQAfQHAAHqDwAB8AETAbwBEgwAAf8BDwHzGAAB/wERARIB/wcAAbwBAAG8
+        FQABbQEAAfABEwHzAQ8B/wwAAeoBBxgAAfABAAHwCAAB/wHzAfQXAAHwARMB/wEQAfIMAAH3Ae0YAAHv
+        AQ4B9CIAAfABEwEAAW0BBwwAAbwBFBgAAQcBDgH0BQAB8gS8AfEB/xYAAfABEwEAAfcB7AwAAfQBDwH/
+        FwAB8gEAAe8B/wQAAfIBEQMAAeoB/wsAAf8IAAEOAQAB8AETAQAB8AERDesBDwHxFwAB/wESAQ8B9AQA
+        Af8B8wERAgAB6gH/BgAB8gUAAfIJAAHwARMBAAH/DwcB9RgAAfABAAHrAfQB/wMAAf8B7AIAAeoB/w0A
+        AQ4IAAHwARMGAAH/CPMB/xoAAf8B7wEAARABBwL0AfABEgEAAUMBDgHqAf8WAAHwARMFAAH/ARMIDwG8
+        GwAB/wHwARIBAAIOAQABEQH3AfQB8wHsAf8JAAHyBQAB6gYAAfABFAQAAf8B6wFtAf8lAAH/AfIBBwHv
+        AfAC/wIAAfQB/xYAAfQBEAFtA+sBEgEUAf9IAAHzBQcB9MAAAUIBTQE+BwABPgMAASgDAAFQAwABFAMA
+        AQEBAAEBBQAB8BcAA/8BAAf/AfAEAAP/AfABfwL/AfAEAAH/Ad8B/wHAAR8BgAEAATAEAAH8AQMB/wKP
+        AgABMAQAAfgBAQH/AT8B5wEPAf8BMAQAAfABAAH+AX0B8wEPAf8BEAQAAeEB+AF+AX0B8wEPAf8BEAQA
+        AeEB/AF8Af8B+QEHAf8BkAQAAeMB/AF8Af0B+QEHAf8BkAQAAeMB/wL8AfkBJwH/AZAEAAHjAeABPAH+
+        AXkBJwH/AYAEAAHhAeABPAHyAXkBIAYAAeEB4AE+AXABcwEgBgAB8AFwAT4BeAHzAT8BAAEwBAAB8AEA
+        Aj8B5wE+AQABMAQAAfgBAAE/Ao8BPAE/AfAEAAH+AQMBPwHAAR8BAAF/AfAEAAP/AfABfwGAAf8B8AQA
+        B/8B8AQAB/8B8AQACw==
+</value>
+  </data>
   <metadata name="ofd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
