Summaries, more readMe and Save Button

--- a/RPAuto/FrmMain.resx
+++ b/RPAuto/FrmMain.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABY
-        CgAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABUAMAARQDAAEBAQABCAUAAUABBhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC6
+        CgAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABUAMAASgDAAEBAQABCAUAAYABDBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
         AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
@@ -153,27 +153,31 @@
         AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
         ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
         AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
-        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/bQABDgMAAW05AAH/
-        HgAB8w4HAfAB/xwAAf8B8QGSAW0B6gHsAQcB9BoAAfQBEAEPAeoM6wFDAQcbAAH/AesCAAEQAUMBDgEA
-        ARAB8hkAAfABFAESAbwMAAEHAeoaAAH0ARIBDgGSAfMC/wH0AbwBQwEQAfIYAAHwARMC7QwAAfMBDwH/
-        GAAB/wH3AQABBwYAAfMBQwEQAfQHAAHqDwAB8AETAbwBEgwAAf8BDwHzGAAB/wERARIB/wcAAbwBAAG8
-        FQABbQEAAfABEwHzAQ8B/wwAAeoBBxgAAfABAAHwCAAB/wHzAfQXAAHwARMB/wEQAfIMAAH3Ae0YAAHv
-        AQ4B9CIAAfABEwEAAW0BBwwAAbwBFBgAAQcBDgH0BQAB8gS8AfEB/xYAAfABEwEAAfcB7AwAAfQBDwH/
-        FwAB8gEAAe8B/wQAAfIBEQMAAeoB/wsAAf8IAAEOAQAB8AETAQAB8AERDesBDwHxFwAB/wESAQ8B9AQA
-        Af8B8wERAgAB6gH/BgAB8gUAAfIJAAHwARMBAAH/DwcB9RgAAfABAAHrAfQB/wMAAf8B7AIAAeoB/w0A
-        AQ4IAAHwARMGAAH/CPMB/xoAAf8B7wEAARABBwL0AfABEgEAAUMBDgHqAf8WAAHwARMFAAH/ARMIDwG8
-        GwAB/wHwARIBAAIOAQABEQH3AfQB8wHsAf8JAAHyBQAB6gYAAfABFAQAAf8B6wFtAf8lAAH/AfIBBwHv
-        AfAC/wIAAfQB/xYAAfQBEAFtA+sBEgEUAf9IAAHzBQcB9MAAAUIBTQE+BwABPgMAASgDAAFQAwABFAMA
-        AQEBAAEBBQAB8BcAA/8BAAf/AfAEAAP/AfABfwL/AfAEAAH/Ad8B/wHAAR8BgAEAATAEAAH8AQMB/wKP
-        AgABMAQAAfgBAQH/AT8B5wEPAf8BMAQAAfABAAH+AX0B8wEPAf8BEAQAAeEB+AF+AX0B8wEPAf8BEAQA
-        AeEB/AF8Af8B+QEHAf8BkAQAAeMB/AF8Af0B+QEHAf8BkAQAAeMB/wL8AfkBJwH/AZAEAAHjAeABPAH+
-        AXkBJwH/AYAEAAHhAeABPAHyAXkBIAYAAeEB4AE+AXABcwEgBgAB8AFwAT4BeAHzAT8BAAEwBAAB8AEA
-        Aj8B5wE+AQABMAQAAfgBAAE/Ao8BPAE/AfAEAAH+AQMBPwHAAR8BAAF/AfAEAAP/AfABfwGAAf8B8AQA
-        B/8B8AQAB/8B8AQACw==
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD/AP8A/wD/AP8A
+        swABDgMAAW05AAH/HgAB8w4HAfAB/xwAAf8B8QGSAW0B6gHsAQcB9BoAAfQBEAEPAeoM6wFDAQcbAAH/
+        AesCAAEQAUMBDgEAARAB8hkAAfABFAESAbwMAAEHAeoaAAH0ARIBDgGSAfMC/wH0AbwBQwEQAfIYAAHw
+        ARMC7QwAAfMBDwH/GAAB/wH3AQABBwYAAfMBQwEQAfQHAAHqDwAB8AETAbwBEgwAAf8BDwHzGAAB/wER
+        ARIB/wcAAbwBAAG8FQABbQEAAfABEwHzAQ8B/wwAAeoBBxgAAfABAAHwCAAB/wHzAfQXAAHwARMB/wEQ
+        AfIMAAH3Ae0YAAHvAQ4B9CIAAfABEwEAAW0BBwwAAbwBFBgAAQcBDgH0BQAB8gS8AfEB/xYAAfABEwEA
+        AfcB7AwAAfQBDwH/FwAB8gEAAe8B/wQAAfIBEQMAAeoB/wsAAf8IAAEOAQAB8AETAQAB8AERDesBDwHx
+        FwAB/wESAQ8B9AQAAf8B8wERAgAB6gH/BgAB8gUAAfIJAAHwARMBAAH/DwcB9RgAAfABAAHrAfQB/wMA
+        Af8B7AIAAeoB/w0AAQ4IAAHwARMGAAH/CPMB/xoAAf8B7wEAARABBwL0AfABEgEAAUMBDgHqAf8WAAHw
+        ARMFAAH/ARMIDwG8GwAB/wHwARIBAAIOAQABEQH3AfQB8wHsAf8JAAHyBQAB6gYAAfABFAQAAf8B6wFt
+        Af8lAAH/AfIBBwHvAfAC/wIAAfQB/xYAAfQBEAFtA+sBEgEUAf9IAAHzBQcB9F4AAW0PAAHvUQABQgFN
+        AT4HAAE+AwABKAMAAVADAAEoAwABAQEAAQEFAAHgAQEWAAP/8QAK/wIAA/8B8AF/Av8B/gEAAQECAAH/
+        Ad8B/wHAAR8BgAEAATwB7AE9AgAB/AEDAf8CjwIAATkB7AE9AgAB+AEBAf8BPwHnAQ8B/wE5AewBPQIA
+        AfABAAH+AX0B8wEPAf8BGQHsAT0CAAHhAfgBfgF9AfMBDwH/ARkB7AE9AgAB4QH8AXwB/wH5AQcB/wGZ
+        Af8B/QIAAeMB/AF8Af0B+QEHAf8BmQH/Af0CAAHjAf8C/AH5AScB/wGZAf8B/QIAAeMB4AE8Af4BeQEn
+        Af8BiQGAAQ0CAAHhAeABPAHyAXkBIAEAAQkBvwHtAgAB4QHgAT4BcAFzASABAAEJAb8B7QIAAfABcAE+
+        AXgB8wE/AQABOQG/Ae0CAAHwAQACPwHnAT4BAAE5Ab8B7QIAAfgBAAE/Ao8BPAE/AfkBvwHtAgAB/gED
+        AT8BwAEfAQABfwH5Ab8B7QIAA/8B8AF/AYAB/wH4AQABAQIAB/8B/AEAAQECAAr/AgAL
 </value>
   </data>
   <metadata name="ofd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="svd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>155, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
